--- a/docker-compose.gcloud.yaml
+++ b/docker-compose.gcloud.yaml
@@ -3,7 +3,7 @@ version: '2'
 services:
   cloudsql:
     image: gcr.io/cloudsql-docker/gce-proxy:1.11
-    command: /cloud_sql_proxy -dir=/cloudsql -instances=heartsteps-kpwhri:us-west2:heartsteps-dev -credential_file=/credentials/gce.json
+    command: /cloud_sql_proxy -dir=/cloudsql -instances=heartsteps-kpwhri:us-west2:heartsteps-kpw -credential_file=/credentials/gce.json
     volumes:
       - cloudsql:/cloudsql
       - ./credentials:/credentials
@@ -13,7 +13,7 @@ services:
       - .env-production
     environment:
       - ALLOWED_HOSTS=localhost
-      - DATABASE_URL=psql://heartsteps:heartsteps@/heartsteps?host=/cloudsql/heartsteps-kpwhri:us-west2:heartsteps-dev
+      - DATABASE_URL=psql://heartsteps:heartsteps@/heartsteps?host=/cloudsql/heartsteps-kpwhri:us-west2:heartsteps-kpw
     command: honcho start dev celery
     volumes:
       - ./server:/server
