--- a/server/Procfile
+++ b/server/Procfile
@@ -2,4 +2,4 @@ dev: ./manage.py runserver 0.0.0.0:8080
 web: gunicorn -b :8080 heartsteps.wsgi:application
 rabbitmq: rabbitmq-server start
 celery: celery -A heartsteps worker -l info -E -B
-cloudsql: /cloud_sql_proxy -dir=/cloudsql -instances=heartsteps-kpwhri:us-west2:heartsteps-dev -credential_file=/credentials/gce.json
+cloudsql: /cloud_sql_proxy -dir=/cloudsql -instances=heartsteps-kpwhri:us-west2:heartsteps-kpw -credential_file=/credentials/gce.json
