--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
 - gcloud auth activate-service-account --key-file=credentials/gce.json
 - gcloud auth configure-docker -q
 - gcloud config set project ${GAE_PROJECT_ID}
-- gcloud container clusters get-credentials heartsteps --region=us-west1
+- gcloud container clusters get-credentials heartsteps-kpw --region=us-west1-a
 
 before_script:
 - cp .env-production server/.env
