--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "build": "ionic-app-scripts build",
     "build:android": "ionic cordova build android --release --buildConfig=build.json",
     "lint": "ionic-app-scripts lint",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve",
+    "build:app": "ionic-app-scripts build --appEntryPoint /client/src/app/main.ts",
+    "serve:app": "ionic-app-scripts serve --appEntryPoint /client/src/app/main.ts",
+    "build:website": "ionic-app-scripts build --appEntryPoint /client/src/web/main.ts",
+    "serve:website": "ionic-app-scripts serve --appEntryPoint /client/src/web/main.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:ci": "jest --runInBand",
