--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,8 @@
     "lint": "ionic-app-scripts lint",
     "build:app": "ionic-app-scripts build --appEntryPoint /client/src/app/main.ts",
     "serve:app": "ionic-app-scripts serve --appEntryPoint /client/src/app/main.ts",
-    "build:website": "ionic-app-scripts build --appEntryPoint /client/src/web/main.ts",
-    "serve:website": "ionic-app-scripts serve --appEntryPoint /client/src/web/main.ts",
+    "build:website": "ionic-app-scripts build --appEntryPoint /client/src/website/main.ts",
+    "serve:website": "ionic-app-scripts serve --appEntryPoint /client/src/website/main.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:ci": "jest --runInBand",
