--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,20 +7,65 @@ http {
     default_type application/octet-stream;
     sendfile on;
     gzip on;
+    gzip_http_version 1.0;
+    gzip_comp_level 2;
+    gzip_min_length 1100;
+    gzip_buffers     4 8k;
+    gzip_proxied any;
+    gzip_types
+        # text/html is always compressed by HttpGzipModule
+        text/css
+        text/javascript
+        text/xml
+        text/plain
+        text/x-component
+        application/javascript
+        application/json
+        application/xml
+        application/rss+xml
+        font/truetype
+        font/opentype
+        application/vnd.ms-fontobject
+        image/svg+xml;
+    gzip_static on;
 
-    index index.html;
+    index index.html;    
 
     server {
         listen 8000;
+
+        server_name _;
+
+        if ($http_x_forwarded_proto = "http") {
+            return 301 https://heartsteps.net$request_uri;
+        }
+
+        location @404 {
+            return 302 /;
+        }
+
+        error_page 404 = @404;
 
         location =/ {
             proxy_set_header Host storage.googleapis.com;
             proxy_pass https://storage.googleapis.com/heartsteps-assets/website/index.html;
         }
 
+        location /build {
+            proxy_set_header Host storage.googleapis.com;
+            proxy_pass https://storage.googleapis.com/heartsteps-assets/website/build;
+        }
+
+        location /assets {
+            proxy_set_header Host storage.googleapis.com;
+            proxy_pass https://storage.googleapis.com/heartsteps-assets/website/assets;
+        }
+
         location / {
             proxy_set_header Host storage.googleapis.com;
             proxy_pass https://storage.googleapis.com/heartsteps-assets/website/;
+            # proxy_intercept_errors on;
+            try_files $uri $uri/ /;
         }
 
         location /static {
