--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_script:
 - cp .env-production server/.env
 - cp .env-production client/.env
 - docker-compose build service-template walking-suggestion-service anti-sedentary-service nginx > /dev/null
-- docker-compose build server > /dev/null
+- docker-compose build server
 - docker-compose build client > /dev/null
 
 script:
