--- a/walking-suggestion-service/Dockerfile
+++ b/walking-suggestion-service/Dockerfile
@@ -14,4 +14,4 @@ ENV googleStorageBucket walking-suggestions-data
 
 # Mount GCSFuse Run the server
 RUN mkdir -p ./data
-CMD gcsfuse --implicit-dirs walking-suggestions-data ./data && gunicorn -b 0.0.0.0:8080 wsgi
+CMD gcsfuse --implicit-dirs walking-suggestions-data ./data && gunicorn -b 0.0.0.0:8080 wsgi --log-level debug
