--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
-    "build:android": "ionic cordova build android --release --buildConfig=build.json",
     "lint": "ionic-app-scripts lint",
     "build:app": "ionic-app-scripts build --appEntryPoint /client/src/app/main.ts",
+    "build:app:android": "ionic cordova build android --release --buildConfig=build.json --appEntryPoint /client/src/app/main.js",
     "serve:app": "ionic-app-scripts serve --appEntryPoint /client/src/app/main.ts",
     "build:website": "ionic-app-scripts build --appEntryPoint /client/src/website/main.ts --appNgModulePath /client/src/website/app.module.ts",
     "serve:website": "ionic-app-scripts serve --appEntryPoint /client/src/website/main.ts --appNgModulePath /client/src/website/app.module.ts",
