--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -91,6 +91,15 @@ http {
             proxy_set_header   X-Forwarded-Host $server_name;
         }
 
+        location /dashboard {
+            proxy_pass http://server:8080/dashboard;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+
         location /privacy-policy {
             proxy_pass http://server:8080/privacy-policy;
             proxy_redirect     off;
