--- a/server/Procfile
+++ b/server/Procfile
@@ -1,5 +1,5 @@
 dev: ./manage.py runserver 0.0.0.0:8080
 web: gunicorn -b :8080 heartsteps.wsgi:application --log-level debug
-celery: celery -A heartsteps worker -l info -E -B
+celery: celery -A heartsteps worker -l info
 beat: celery -A heartsteps beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
 cloudsql: /cloud_sql_proxy -dir=/cloudsql -instances=heartsteps-kpwhri:us-west1:heartsteps-kpw -credential_file=/credentials/gce.json
