--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -108,6 +108,13 @@ http {
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header   X-Forwarded-Host $server_name;
         }
+
+        location /monitor {
+            rewrite ^/monitor/(.*)$ /$1 break;
+            proxy_pass http://monitor:8888;
+            proxy_set_header Host $host;
+        }
+
     }
 
 }
