--- a/deployment.yaml
+++ b/deployment.yaml
@@ -122,6 +122,43 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
+  name: monitor
+  labels:
+    app: monitor
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: monitor
+    spec:
+      containers:
+      - name: monitor
+        image: mher/flower
+        ports:
+        - containerPort: 8888
+        command: ['flower',  "--broker=amqp://guest:guest@rabbitmq:5672//", "--port=8888", "--url_prefix=monitor"]
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: monitor
+  labels:
+    run: monitor
+spec:
+  ports:
+  - port: 8888
+    targetPort: 8888
+  selector:
+    app: monitor
+
+---
+
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
   name: heartsteps-worker
   labels:
     app: heartsteps-worker
@@ -235,7 +272,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: gcr.io/heartsteps-kpwhri/heartsteps-nginx
+        image: gcr.io/heartsteps-kpwhri/heartsteps-nginx:latest
         imagePullPolicy: Always
         env:
           - name: BUILD_NUMBER
