--- a/deployment.yaml
+++ b/deployment.yaml
@@ -163,17 +163,49 @@ metadata:
   labels:
     app: heartsteps-worker
 spec:
-  replicas: 1
+  replicas: 3
   template:
     metadata:
       labels:
         app: heartsteps-worker
     spec:
       containers:
-      - name: heartsteps-celery-app
-        image: gcr.io/heartsteps-kpwhri/heartsteps-server:latest
+      - name: heartsteps-celery-worker
+        image: gcr.io/heartsteps-kpwhri/heartsteps-server
         imagePullPolicy: Always
         command: ['honcho', 'start', 'cloudsql', 'celery']
+        env:
+          - name: BUILD_NUMBER
+            value: DEFAULT_BUILD_NUMBER
+          - name: SECRET_KEY
+            value: 'ka6p=i&71njyh)hw%amk)p1)(a=u$#gpck-8!%^^51f^7g7b8o'
+          - name: DATABASE_URL
+            value: 'psql://heartsteps:heartsteps@/heartsteps?host=/cloudsql/heartsteps-kpwhri:us-west1:heartsteps-kpw'
+          - name: ANTI_SEDENTARY_SERVICE_URL
+            value: 'http://anti-sedentary:8080'
+          - name: WALKING_SUGGESTION_SERVICE_URL
+            value: 'http://walking-suggestion:8080'
+
+---
+
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: heartsteps-beat
+  labels:
+    app: heartsteps-beat
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: heartsteps-beat
+    spec:
+      containers:
+      - name: heartsteps-celery-beat
+        image: gcr.io/heartsteps-kpwhri/heartsteps-server
+        imagePullPolicy: Always
+        command: ['honcho', 'start', 'cloudsql', 'beat']
         env:
           - name: BUILD_NUMBER
             value: DEFAULT_BUILD_NUMBER
