--- a/deployment.yaml
+++ b/deployment.yaml
@@ -191,6 +191,70 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
+  name: heartsteps-worker-messages
+  labels:
+    app: heartsteps-worker-messages
+spec:
+  replicas: 2
+  template:
+    metadata:
+      labels:
+        app: heartsteps-worker-messages
+    spec:
+      containers:
+      - name: heartsteps-celery-worker-messages
+        image: gcr.io/heartsteps-kpwhri/heartsteps-server
+        imagePullPolicy: Always
+        command: ['honcho', 'start', 'cloudsql', 'celery-messages']
+        env:
+          - name: BUILD_NUMBER
+            value: DEFAULT_BUILD_NUMBER
+          - name: SECRET_KEY
+            value: 'ka6p=i&71njyh)hw%amk)p1)(a=u$#gpck-8!%^^51f^7g7b8o'
+          - name: DATABASE_URL
+            value: 'psql://heartsteps:heartsteps@/heartsteps?host=/cloudsql/heartsteps-kpwhri:us-west1:heartsteps-kpw'
+          - name: ANTI_SEDENTARY_SERVICE_URL
+            value: 'http://anti-sedentary:8080'
+          - name: WALKING_SUGGESTION_SERVICE_URL
+            value: 'http://walking-suggestion:8080'
+
+---
+
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: heartsteps-worker-export
+  labels:
+    app: heartsteps-worker-export
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: heartsteps-worker-export
+    spec:
+      containers:
+      - name: heartsteps-celery-worker-export
+        image: gcr.io/heartsteps-kpwhri/heartsteps-server
+        imagePullPolicy: Always
+        command: ['honcho', 'start', 'cloudsql', 'celery-export']
+        env:
+          - name: BUILD_NUMBER
+            value: DEFAULT_BUILD_NUMBER
+          - name: SECRET_KEY
+            value: 'ka6p=i&71njyh)hw%amk)p1)(a=u$#gpck-8!%^^51f^7g7b8o'
+          - name: DATABASE_URL
+            value: 'psql://heartsteps:heartsteps@/heartsteps?host=/cloudsql/heartsteps-kpwhri:us-west1:heartsteps-kpw'
+          - name: ANTI_SEDENTARY_SERVICE_URL
+            value: 'http://anti-sedentary:8080'
+          - name: WALKING_SUGGESTION_SERVICE_URL
+            value: 'http://walking-suggestion:8080'
+
+---
+
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
   name: heartsteps-beat
   labels:
     app: heartsteps-beat
