--- a/.env-development
+++ b/.env-development
@@ -3,3 +3,7 @@ ONESIGNAL_APP_ID=ce147de3-15d0-4bbd-9d32-ad17c3986cc1
 TWILIO_ACCOUNT_SID=ACe7418f8ce3e5c7d1af471cf28bd4c83b
 TWILIO_AUTH_TOKEN=d9489f57430bda12bef36840c497863a
 TWILIO_PHONE_NUMBER=+12063503346
+SENDGRID_API_KEY=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
+STUDY_PHONE_NUMBER=866-648-1775
+STUDY_EMAIL_ADDRESS='Christopher.D.Mack@kp.org'
+SURVEY_EMAIL_ADDRESS=['christopher@mackdata.com']
