--- a/.env-production
+++ b/.env-production
@@ -9,3 +9,7 @@ ONESIGNAL_APP_ID=ce147de3-15d0-4bbd-9d32-ad17c3986cc1
 TWILIO_ACCOUNT_SID=AC80e50b56dd64840648bbaf9719fdee18
 TWILIO_AUTH_TOKEN=85809c53ec58027672f562eb9918fc36
 TWILIO_PHONE_NUMBER=+12063503346
+SENDGRID_API_KEY=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
+STUDY_PHONE_NUMBER=866-648-1775
+STUDY_EMAIL_ADDRESS='Christopher.D.Mack@kp.org'
+SURVEY_EMAIL_ADDRESS=['jenna.m.leonardo@kp.org','robin.c.lee@kp.org']
