--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -12,6 +12,7 @@ django-cors-headers==2.4.0
 django-environ==0.4.4
 django-filter==1.1.0
 django-import-export==1.2.0
+django-sendgrid==1.0.1
 django-uuidfield==0.5.0
 djangorestframework==3.8.2
 et-xmlfile==1.0.1
