--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -12,7 +12,6 @@ django-cors-headers==2.4.0
 django-environ==0.4.4
 django-filter==1.1.0
 django-import-export==1.2.0
-django-sendgrid==1.0.1
 django-uuidfield==0.5.0
 djangorestframework==3.8.2
 et-xmlfile==1.0.1
@@ -39,6 +38,7 @@ PyYAML==3.13
 requests==2.19.1
 requests-oauthlib==1.0.0
 requests-toolbelt==0.8.0
+sendgrid==6.0.5
 Shapely==1.6.4.post2
 simplejson==3.16.0
 six==1.11.0
