--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -38,7 +38,7 @@ PyYAML==3.13
 requests==2.19.1
 requests-oauthlib==1.0.0
 requests-toolbelt==0.8.0
-sendgrid==6.0.5
+sendgrid-django==4.2.0
 Shapely==1.6.4.post2
 simplejson==3.16.0
 six==1.11.0
