--- a/.env-production
+++ b/.env-production
@@ -12,4 +12,4 @@ TWILIO_PHONE_NUMBER=+12063503346
 SENDGRID_API_KEY=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
 STUDY_PHONE_NUMBER=866-648-1775
 STUDY_EMAIL_ADDRESS='Christopher.D.Mack@kp.org'
-SURVEY_EMAIL_ADDRESS=['christopher@mackdata.com']
+SURVEY_EMAIL_ADDRESS=['jenna.m.leonardo@kp.org','robin.c.lee@kp.org','linda.m.kiel@kp.org','christopher.d.mack@kp.org']
