removed old files

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ anti-sedentary-service/debug.json
 anti-sedentary-service/debug_nightly.json
 anti-sedentary-service/decision_debug.r
 anti-sedentary-service/nightly_debug.r
+anti-sedentary-service/look_at_pedja.ipynb
+anti-sedentary-service/compare_pedja.ipynb
 
 *~
 *.sw[mnpcod]
