More fiddling to fix travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: required
 
 install: 
 # install google cloud sdk and kubernetes
-- sudo apt-get update && sudo apt-get install -y apt-transport-https
+- sudo apt-get clean && sudo apt-get update && sudo apt-get install -y apt-transport-https dpkg
 - curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
 - export CLOUD_SDK_REPO="cloud-sdk-$(lsb_release -c -s)"
 - echo "deb http://packages.cloud.google.com/apt $CLOUD_SDK_REPO main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
