Add command for pooling service

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -81,6 +81,7 @@ services:
       - server
   pooling-service:
       build: ./pooling-service
+      command: python app.py
       volumes:
         - ./pooling-service:/pooling-service
         - ./credentials:/credentials
