--- a/.env-production
+++ b/.env-production
@@ -13,3 +13,4 @@ SENDGRID_API_KEY=SG.hc2wPT0uT8aepqNHC59PFQ.Yb8A92G4NIAHiIdh8cFo7L1nHucgoWXBf4NJA
 STUDY_PHONE_NUMBER=866-648-1775
 STUDY_EMAIL_ADDRESS=['Christopher.D.Mack@kp.org']
 SURVEY_EMAIL_ADDRESS=['jenna.m.leonardo@kp.org','robin.c.lee@kp.org','linda.m.kiel@kp.org','christopher.d.mack@kp.org']
+POOLING_SERVICE_URL=http://35.197.16.184:8080/update
