Add build number, version, and platform when saving pageviews

--- a/.env-development
+++ b/.env-development
@@ -1,3 +1,4 @@
+BUILD_VERSION=2.1.0
 ONESIGNAL_API_KEY=YzM0ZWYyYWYtMDBhOC00OWQ1LTk1MTEtYThhYWEyNGY0ODIx
 ONESIGNAL_APP_ID=ce147de3-15d0-4bbd-9d32-ad17c3986cc1
 TWILIO_ACCOUNT_SID=AC80e50b56dd64840648bbaf9719fdee18
