--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ after_success:
 # move app files into server
 - gsutil -m rsync -dr client/www gs://heartsteps-assets/app
 # generate website and upload
-- docker-compose run client npm run build:website
+- docker-compose run -e BUILD_NUMBER=$TRAVIS_BUILD_NUMBER client npm run build:website
 - gsutil -m rsync -dr client/www gs://heartsteps-assets/website
 # collect static files for server
 - docker-compose run server python manage.py collectstatic
