--- a/pooling-service/Dockerfile
+++ b/pooling-service/Dockerfile
@@ -7,6 +7,7 @@ RUN wget https://repo.continuum.io/archive/Anaconda3-5.0.1-Linux-x86_64.sh && \
 
 RUN conda create -n py36 python=3.6.8 && \
     conda install --name py36 -c conda-forge pyreadr && \
+conda install --name py36  -c conda-forge pandas && \
     conda install --name py36 -c conda-forge jupyter && \
     conda install  --name py36 -c conda-forge tensorflow && \
     conda install --name py36  -c conda-forge gpflow  && \
