--- a/pooling-service/Dockerfile
+++ b/pooling-service/Dockerfile
@@ -6,13 +6,13 @@ RUN wget https://repo.continuum.io/archive/Anaconda3-5.0.1-Linux-x86_64.sh && \
     ln -s /root/anaconda3/bin/conda /usr/local/bin/conda
 
 RUN conda create -n py36 python=3.6.8 && \
-    conda install --name py36 -c conda-forge pyreadr && \
-    conda install --name py36  -c conda-forge pandas && \
-    conda install --name py36 -c conda-forge jupyter && \
-    conda install  --name py36 -c conda-forge tensorflow && \
-    conda install --name py36  -c conda-forge gpflow  && \
-    conda install pytorch torchvision -c pytorch && \
-	conda install  --name py36 -c conda-forge scikit-learn && \
+    conda install -q --name py36 -c conda-forge pyreadr && \
+    conda install -q --name py36  -c conda-forge pandas && \
+    conda install -q --name py36 -c conda-forge jupyter && \
+    conda install -q --name py36 -c conda-forge tensorflow && \
+    conda install -q --name py36  -c conda-forge gpflow  && \
+    conda install -q pytorch torchvision -c pytorch && \
+	conda install -q --name py36 -c conda-forge scikit-learn && \
     conda clean --all
 
 RUN /root/anaconda3/envs/py36/bin/pip install git+https://github.com/cornellius-gp/gpytorch.git && \
