--- a/pooling-service/Dockerfile
+++ b/pooling-service/Dockerfile
@@ -1,22 +1,22 @@
 FROM heartsteps_service-template:latest
 
-RUN wget https://repo.continuum.io/archive/Anaconda3-5.0.1-Linux-x86_64.sh && \
-    bash Anaconda3-5.0.1-Linux-x86_64.sh -b && \
+RUN wget https://repo.continuum.io/archive/Anaconda3-5.0.1-Linux-x86_64.sh >/dev/null && \
+    bash Anaconda3-5.0.1-Linux-x86_64.sh -b  >/dev/null && \
     rm Anaconda3-5.0.1-Linux-x86_64.sh && \
     ln -s /root/anaconda3/bin/conda /usr/local/bin/conda
 
-RUN conda create -n py36 python=3.6.8 && \
-    conda install -q --name py36 -c conda-forge pyreadr && \
-    conda install -q --name py36  -c conda-forge pandas && \
-    conda install -q --name py36 -c conda-forge jupyter && \
-    conda install -q --name py36 -c conda-forge tensorflow && \
-    conda install -q --name py36  -c conda-forge gpflow  && \
-    conda install -q pytorch torchvision -c pytorch && \
-	conda install -q --name py36 -c conda-forge scikit-learn && \
+RUN conda create -q -y -n py36 python=3.6.8 && \
+    conda install -q -y --name py36 -c conda-forge pyreadr && \
+    conda install -q -y --name py36  -c conda-forge pandas && \
+    conda install -q -y --name py36 -c conda-forge jupyter && \
+    conda install -q -y --name py36 -c conda-forge tensorflow && \
+    conda install -q -y --name py36  -c conda-forge gpflow  && \
+    conda install -q -y pytorch torchvision -c pytorch && \
+	conda install -q -y --name py36 -c conda-forge scikit-learn && \
     conda clean --all
 
-RUN /root/anaconda3/envs/py36/bin/pip install git+https://github.com/cornellius-gp/gpytorch.git && \
-    /root/anaconda3/envs/py36/bin/pip install pandas
+RUN /root/anaconda3/envs/py36/bin/pip install -q git+https://github.com/cornellius-gp/gpytorch.git && \
+    /root/anaconda3/envs/py36/bin/pip install -q pandas
 
 ADD . /pooling-service
 WORKDIR /pooling-service
