--- a/.env-development
+++ b/.env-development
@@ -8,3 +8,4 @@ SENDGRID_API_KEY=SG.hc2wPT0uT8aepqNHC59PFQ.Yb8A92G4NIAHiIdh8cFo7L1nHucgoWXBf4NJA
 STUDY_PHONE_NUMBER=866-648-1775
 STUDY_EMAIL_ADDRESS=['Christopher.D.Mack@kp.org']
 SURVEY_EMAIL_ADDRESS=['christopher@mackdata.com']
+DARKSKY_API_KEY=0d722c8cd6bbe6ee331d4c2081ba9631
