--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
     "build:app": "ionic-app-scripts build --appEntryPoint /client/src/app/main.ts",
-    "build:app:android": "ionic cordova build android --release --prod --buildConfig=build.json --appEntryPoint /client/src/app/main.ts",
+    "build:app:android": "ionic cordova build android --release --buildConfig=build.json --appEntryPoint /client/src/app/main.ts",
     "build:app:android:debug": "ionic cordova build android --buildConfig=build.json --appEntryPoint /client/src/app/main.ts",
     "serve:app": "ionic-app-scripts serve --appEntryPoint /client/src/app/main.ts",
     "build:website": "ionic-app-scripts build --appEntryPoint /client/src/website/main.ts --appNgModulePath /client/src/website/app.module.ts",
