--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_script:
 - docker-compose build service-template > /dev/null
 - docker-compose build walking-suggestion-service anti-sedentary-service nginx > /dev/null
 - docker-compose build server > /dev/null
+- docker-compose run server python manage.py migrate
 - docker-compose build client > /dev/null
 
 script:
