--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "build:app": "ionic-app-scripts build --appEntryPoint /client/src/app/main.ts",
     "build:app:android": "ionic cordova build android --release --buildConfig=build.json --appEntryPoint /client/src/app/main.ts",
     "build:app:android:debug": "ionic cordova build android --buildConfig=build.json --appEntryPoint /client/src/app/main.ts",
+    "build:app:ios": "ionic cordova prepare ios --prod --buildConfig=build.json --appEntryPoint /client/src/app/main.ts",
     "serve:app": "ionic-app-scripts serve --appEntryPoint /client/src/app/main.ts",
     "build:website": "ionic-app-scripts build --appEntryPoint /client/src/website/main.ts --appNgModulePath /client/src/website/app.module.ts",
     "serve:website": "ionic-app-scripts serve --appEntryPoint /client/src/website/main.ts --appNgModulePath /client/src/website/app.module.ts",
@@ -42,7 +43,7 @@
     "axios": "^0.18.0",
     "cordova-android": "^8.0.0",
     "cordova-inappbrowser": "^1.0.6",
-    "cordova-ios": "^5.0.0",
+    "cordova-ios": "5.1.1",
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
@@ -59,7 +60,7 @@
     "ionicons": "3.0.0",
     "moment": "^2.24.0",
     "node-sass": "^4.9.0",
-    "onesignal-cordova-plugin": "^2.4.6",
+    "onesignal-cordova-plugin": "^2.8.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "url-join": "^4.0.0",
