--- a/client/package.json
+++ b/client/package.json
@@ -64,6 +64,7 @@
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "url-join": "^4.0.0",
+    "xml": "^1.0.1",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
@@ -77,7 +78,9 @@
     "jest": "^23.6.0",
     "jest-preset-angular": "^6.0.1",
     "tslint": "^5.11.0",
-    "typescript": "~2.6.2"
+    "typescript": "~2.6.2",
+    "xml2js": "^0.4.23",
+    "xmlbuilder": "^13.0.2"
   },
   "description": "An Ionic project",
   "config": {
