--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
 - docker-compose build walking-suggestion-service anti-sedentary-service nginx > /dev/null
 - docker-compose build server > /dev/null
 - docker-compose run server python manage.py migrate > /dev/null
-- docker-compose build client 
+- docker-compose build client > /dev/null
 
 script:
 - docker-compose run server python manage.py test
