--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 - sudo apt-get update && sudo apt-get install google-cloud-sdk kubectl
 
 before_script:
-- docker system prune -a
+- docker system prune -af
 - docker volume prune -f
 - cp .env-production server/.env
 - cp .env-production client/.env
